# kiminokoe

./: .gitignore  Cargo.toml  pyproject.toml  run.sh
kiminokoe/: __init__.py
src/: command.rs  connector.rs  lib.rs
tests/: test_basic.py
