[package]
name = "kiminokoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kiminokoe"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.90"
futures-util = "0.3.31"
pyo3 = { version = "0.22.0", features = ["anyhow"] }
pyo3-async-runtimes = { git = "https://github.com/PyO3/pyo3-async-runtimes.git", version = "0.21.0", features = ["tokio-runtime"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
serenity-voice-model = "0.2.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-tungstenite = "0.24.0"
